# willowblossom

./: .gitignore  Cargo.toml  README.html  README.md  design.md  rustc-ice-2025-04-01T07_30_00-53801.txt
.cargo/: config.toml
.codex/skills/bevy-query-conflicts/: SKILL.md
.codex/skills/bevy-query-conflicts/agents/: openai.yaml
.codex/skills/commit-small-features/: SKILL.md
.codex/skills/commit-small-features/agents/: openai.yaml
.codex/skills/egui-stable-window-width/: SKILL.md
.codex/skills/egui-stable-window-width/agents/: openai.yaml
.codex/skills/moonberry-rewrite-reference/: SKILL.md
.codex/skills/moonberry-rewrite-reference/agents/: openai.yaml
.codex/skills/moonberry-rewrite-reference/references/: moonberry-behavior.md  willowblossom-migration-map.md
.codex/skills/unify-voxel-world/: SKILL.md
.codex/skills/unify-voxel-world/agents/: openai.yaml
.codex/skills/willowblossom-trpg-access/: SKILL.md
.codex/skills/willowblossom-trpg-access/agents/: openai.yaml
.codex/skills/willowblossom-trpg-access/references/: access-model.md  bevy-0.18.1-index.md  napcat-docs-index.md
assets/audio/: JRPG2_PIANO_LICENSE.txt
assets/models/free_sample/: BuildingBlock_2.gltf  Lander.gltf  Prop_14.gltf  Prop_15.gltf  SOURCE.txt  SatelliteDish_1.gltf  SolarPanel_4.gltf
assets/shaders/: voxel_kuwahara.wgsl  voxel_radiance_cascade.wgsl
crates/bevy_voxel/: Cargo.toml  LICENSE  README.md  notes.md  runfile
crates/bevy_voxel/assets/examples/: out.vox  proc_gen.wgsl
crates/bevy_voxel/examples/: falling_sand.rs
crates/bevy_voxel/src/: boundary.rs  compute.rs  connectivity.rs  element.rs  grid.rs  lib.rs  prism.rs
docs/: moonberry_gap_audit.md  planet_sdf_plan.md  repo_review_result.md
examples/: dvd.rs  jump.rs
scripts/: emotivoice_worker.py  import_free_sample.py  melotts_worker.py  prepare_melotts_chinese.py  requirements-emotivoice.txt  requirements-melotts.txt  setup_emotivoice.ps1  setup_melotts.ps1  setup_sparktts.ps1  sparktts_build_voice_bank.py  sparktts_worker.py
src/: battle_round.rs  camera.rs  lib.rs  main.rs  moonberry_talents.rs  replay.rs  rule_engine.rs  scene.rs  voxel.rs  voxel_radiance.rs
src/deepseek/: mod.rs
src/mirai/: bevy_tokio.rs  mod.rs
src/napcat/: mod.rs
src/planet/: lod.rs  meshing.rs  mod.rs  octree.rs  plugin.rs  sdf.rs
src/ui/: debug.rs  ime.rs  mod.rs
src/ui/components/: icon.rs
