[package]
name = "willowblossom"                # [CHANGE]: Set your project name.
version = "0.12.3"
edition = "2021"
description = "a bevy game template"
exclude = ["assets", "wasm", ".data"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3 # Improves performance when developing, but slows down first compilation significantly
debug = false # Disabled debug symbols for dependencies

[features]
dev = [
    "bevy/file_watcher",    # Enables hot reloading of assets
    "bevy/dynamic_linking", # Enables dynamic linking for faster compilation
]
pixel_perfect = []
resizable = []
save_schedule = []
mock_touch = []

[dependencies]
# The bevy engine <3
# Default feautres are disabled because we are using audio from a different source (kira)
# We also add trace_tracy for profiling
bevy = { version = "0.15.3" }

bevy_asset_loader = { version = "0.22.0", features = [
    "progress_tracking",
] } # Better asset loader
bevy_embedded_assets = { version = "0.12.0" } # Embed assets in binary
bevy_kira_audio = { version = "0.22.0" } # Improved audio library
iyes_progress = { version = "0.13.1", features = [
    "assets",
] } # Track loading and game state
bevy-persistent = { version = "0.7.0", features = [
    "toml",
    "all",
] } # Persistent values (for saving)

# Core
rand = { version = "0.9.0" }
serde = { version = "1.0.219", features = ["derive"] }

# Debug
bevy-inspector-egui = { version = "0.30.0" } # Inspector
egui_dock = { version = "0.16.0" }
egui-gizmo = { version = "0.16.2" }

## WebSocket
url = "2.5.4"
tungstenite = "0.26.2"
tokio = { version = "1.44.1", features = ["full"] }
futures-channel = "0.3.31"
futures-util = "0.3.31"
tokio-tungstenite = "0.26.2"
crossbeam-channel = "0.5.14"
async-compat = "0.2.4"
futures-lite = "2.6.0"
bevy_egui = "0.33.0"
serde_json = "1.0.140"
dirs = "6.0.0"
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
image = { version = "0.25.5", features = ["jpeg", "png"] }
reqwest = { version = "0.12.14", features = ["blocking", "json"] }
