[package]
name = "willowblossom"                # [CHANGE]: Set your project name.
version = "0.0.1"
edition = "2021"
description = "a bevy game template"
exclude = ["assets", "wasm", ".data"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3 # Improves performance when developing, but slows down first compilation significantly
debug = false # Disabled debug symbols for dependencies

[features]
dev = [
    "bevy/file_watcher",    # Enables hot reloading of assets
    "bevy/dynamic_linking", # Enables dynamic linking for faster compilation
]
pixel_perfect = []
resizable = []
save_schedule = []
mock_touch = []

[dependencies]
# The bevy engine <3
# Default feautres are disabled because we are using audio from a different source (kira)
# We also add trace_tracy for profiling
bevy = { version = "=0.19.0", features = ["wav"] }

bevy_asset_loader = { version = "0.27.0", features = [
    "progress_tracking",
] } # Better asset loader
bevy_embedded_assets = { version = "0.16.0" } # Embed assets in binary
bevy_kira_audio = { version = "0.26.0" } # Improved audio library
iyes_progress = { version = "0.17.0", features = [
    "assets",
] } # Track loading and game state
bevy-persistent = { version = "0.11.0", features = [
    "toml",
    "all",
] } # Persistent values (for saving)

# Core
ab_glyph = "0.2.32"
rand = { version = "0.10.1" }
serde = { version = "1.0.228", features = ["derive"] }

# Debug
bevy-inspector-egui = { version = "0.37.0" } # Inspector

## WebSocket
url = "2.5.8"
tungstenite = "0.29.0"
tokio = { version = "1.52.3", features = ["full"] }
futures-channel = "0.3.32"
futures-util = "0.3.32"
tokio-tungstenite = "0.29.0"
crossbeam-channel = "0.5.15"
async-compat = "0.2.5"
futures-lite = "2.6.1"
bevy_egui = { version = "=0.41.0", features = ["serde"] }
egui = { version = "=0.35.0", features = ["persistence"] }
serde_json = "1.0.150"
base64 = "0.22.1"
tempfile = "3.20.0"
dirs = "6.0.0"
egui_extras = { version = "=0.35.0", features = ["all_loaders"] }
image = { version = "0.25.5", features = ["jpeg", "png"] }
reqwest = { version = "0.12.14", features = ["blocking", "json"] }
curl = "0.4.47"
bevy_voxel_world = "0.17.0"
avian3d = "0.7.0"
voxxelmaxx = { path = "crates/bevy_voxel" }
