[package]
name = "voxxelmaxx"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/akriegman/bevy_voxel"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
avian3d = "0.7.0"
bevy = { version = "0.19.0", default-features = false, features = ["3d"] }
bitvec = "1.0.1"

[dev-dependencies]
rand = "0.10.1"
